@@ -1,12 +1,13 @@
 package cuke4duke.internal.jvmclass;
 
 import cuke4duke.PyString;
-import static cuke4duke.internal.Utils.join;
 import cuke4duke.internal.language.Transformable;
 import org.jruby.RubyArray;
 
 import java.util.HashMap;
 import java.util.Map;
+
+import static cuke4duke.internal.Utils.join;
 
 /**
  * Converts the arguments that come from Cucumber to other types, before they are sent in to step definitions.
