@@ -1,13 +1,10 @@
 package cuke4duke.internal.jvmclass;
 
 
+import com.google.inject.AbstractModule;
+import cuke4duke.internal.jvmclass.GuiceFactoryTest.SomeClass.SomeInnerClass;
 import org.junit.Before;
 import org.junit.Test;
-
-import com.google.inject.AbstractModule;
-
-
-import cuke4duke.internal.jvmclass.GuiceFactoryTest.SomeClass.SomeInnerClass;
 
 public class GuiceFactoryTest {
     public static class SomeClass {
